<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TouchWin</string>
    <string name="action_settings">Settings</string>
    <string name="img_logo">Logo</string>
    <string name="img_separateur">Separateur</string>
    
    <!-- activity_main -->
    <string name="btn_play">Jouer</string>
    <string name="btn_stats">Statistiques</string>
    <string name="btn_settings">Paramètres</string>
    
    <!-- activity_connection -->
    <string name="login">Login :</string>
	<string name="pwd">Mot de passe :</string>
	<string name="btn_connection">Connexion</string>
	<string name="btn_addData">AddData</string>
	<string name="sinscrire">S\'inscrire</string>
	
	<!-- activity_register -->
    <string name="title_register">Inscription</string>
	
	<!-- activity_settings -->
	<string name="title_settings">Paramètres</string>
	<string name="checkBoxSound">Activer les sons</string>
	<string name="lb_login">Login :</string>
	<string name="lb_pwd">Mot de passe :</string>
	<string name="lb_help">Règles du jeu :</string>
	<string name="btn_help">Aide</string>
	<string name="btn_valid">Valider</string>
	
		<!-- Fragments -->
		<string name="btn_back">Retour</string>
		<string name="title_fragments">Comment jouer ?</string>
		<string name="lb_step1">1.</string>
		<string name="lb_page1">1 / 3</string>
		<string name="lb_page2">2 / 3</string>
		<string name="lb_page3">3 / 3</string>
		<string name="title_game1">Couleurs</string>
		<string name="title_game2">Calculs</string>
		<string name="imgTrue">True</string>
		<string name="imgFalse">False</string>
		<string name="step1">1. Connexion de ton ADVERSAIRE</string>
		<string name="step2">2. Choix du JEU</string>
		<string name="step3">3. Sélection du nombre de ROUNDS gagnants</string>
		<string name="step4">GO !</string>
		<string name="step5">Soit le plus rapide à cliquer lorsque l\'image jaune apparaît !</string>
		<string name="step6">Mais attention aux images rouge...</string>
		<string name="step7">Tape lorsque le calcul est correct</string>
		<string name="step8">Si tu te trompes, le point ira à ton adversaire</string>
		
	<!-- activity_stats -->
	<string name="title_stats">Statistiques</string>
	<string name="lb_wins">Victoires :</string>
	<string name="lb_total">Parties jouées :</string>
	<string name="lb_results">Historique :</string>
	<string name="title_col_date">Date</string>
	<string name="title_col_player">Joueur 2</string>
	<string name="title_col_results">Scores</string>
	<string name="btn_rank">Classement</string>
	
	<!-- activity_play -->
	<string name="title_play">Jouer</string>
	<string name="vs">VS</string>
	<string name="lb_game">Sélectionner un jeu :</string>
	<string name="lb_time">Rounds :</string>
	<string name="title_dialog_player">Joueur 2</string>
	<string name="title_dialog_game">Sélectionner un jeu</string>
	<string name="btn_playGo">Jouer</string>
	<string name="radioBtn7">7</string>
	<string name="radioBtn15">15</string>
	<string name="radioBtn21">21</string>
	
	<!-- activity_game -->
	<string name="btn_player1">Player 1</string>
	<string name="btn_player2">Player 2</string>
	<string name="img_color">Image couleur</string>
	<string name="title_dialog_stop">Pause</string>
	<string name="lb_result_player">Joueur</string>
	<string name="lb_result_date">Date</string>
	<string name="lb_result_score">Score</string>
	<string name="lb_round">Rounds restants</string>
	
	
	
	<!-- activity_rank -->
	<string name="title_rank">Classement</string>
	
</resources>
