<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fragment" >

    <TextView
        android:id="@+id/lbPage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/lb_page3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lbTitleFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/title_game2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/step8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/img2True"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:text="@string/step8"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/img2True"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step7"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img2_true"
        android:contentDescription="@string/imgTrue" />

    <TextView
        android:id="@+id/step7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbTitleFragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/step7"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/img2False"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/imgFalse"
        android:src="@drawable/img2_false" />

</RelativeLayout>