<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/title_play"
        android:src="@drawable/header" />

    <TextView
        android:id="@+id/lbPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/title_play"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/lbGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgVS"
        android:layout_below="@+id/editPlayer2"
        android:layout_marginTop="65dp"
        android:text="@string/lb_game"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/imgVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPlayer1"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/editPlayer2"
        android:contentDescription="@string/vs"
        android:src="@drawable/vs" />

    <TextView
        android:id="@+id/lbTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editGame"
        android:layout_below="@+id/editGame"
        android:layout_marginTop="33dp"
        android:text="@string/lb_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:layout_toRightOf="@+id/lbPlay"
        android:text="@string/btn_playGo"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbPlay"
        android:layout_alignTop="@+id/lbTime" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn7" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn15"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn21" />
    </RadioGroup>

    <EditText
        android:id="@+id/editPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnGo"
        android:layout_below="@+id/imgHeader"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbGame"
        android:layout_below="@+id/lbGame"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="text" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editPlayer2"
        android:layout_marginTop="24dp"
        android:src="@drawable/separateur"
        android:contentDescription="@string/img_separateur" />

    <EditText
        android:id="@+id/editPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPlayer1"
        android:layout_alignTop="@+id/imgVS"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="text" />

</RelativeLayout>