<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/touchwin" />

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnAddData"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_addData" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbPassword"
        android:layout_below="@+id/lbPassword"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/lbPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLogin"
        android:layout_below="@+id/editLogin"
        android:layout_marginTop="21dp"
        android:text="@string/pwd"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnConnection"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/btn_connection"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/lbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLogin"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="22dp"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnRegister"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:text="@string/sinscrire" />

</RelativeLayout>
