<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background" >
    
    <Button
        android:id="@+id/btnStats"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPlay"
        android:layout_below="@+id/btnPlay"
        android:layout_marginTop="22dp"
        android:text="@string/btn_stats"
        android:typeface="monospace" 
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStats"
        android:layout_below="@+id/btnStats"
        android:layout_marginTop="20dp"
        android:text="@string/btn_settings"
        android:typeface="monospace" 
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/btn_play"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/logo" />

</RelativeLayout>
