<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/title_settings"
        android:src="@drawable/header" />

    <Button
        android:id="@+id/btnValid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="26dp"
        android:layout_marginRight="16dp"
        android:text="@string/btn_valid"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/lbRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/title_register"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/lbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLogin"
        android:layout_below="@+id/imgHeader"
        android:layout_marginTop="45dp"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbLogin"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/lbPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLogin"
        android:layout_below="@+id/editLogin"
        android:layout_marginTop="25dp"
        android:text="@string/pwd"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbPassword"
        android:layout_below="@+id/lbPassword"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>