<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lbColDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/title_col_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lbColPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbColDate"
        android:layout_alignBottom="@+id/lbColDate"
        android:layout_centerHorizontal="true"
        android:text="@string/title_col_player"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lbColResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbColPlayer"
        android:layout_alignBottom="@+id/lbColPlayer"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:text="@string/title_col_results"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
