<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/lbTitleFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/title_fragments"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/lbStep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lbTitleFragment"
        android:layout_marginTop="46dp"
        android:text="@string/lb_step1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/yellow"
        android:typeface="monospace" />
    
    <TextView
        android:id="@+id/lbPage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/lb_page1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
