<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/lbPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editPassword"
        android:layout_alignLeft="@+id/editPassword"
        android:layout_marginBottom="16dp"
        android:text="@string/lb_pwd"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:typeface="monospace"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbPassword"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnValid"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/header3"
        android:contentDescription="@string/title_settings" />

    <TextView
        android:id="@+id/lbSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/title_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/white"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnValid"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_toRightOf="@+id/lbPassword"
        android:text="@string/btn_valid"
        android:typeface="monospace" 
        android:textColor="@color/white"/>

    <CheckBox
        android:id="@+id/checkBoxSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/checkBoxSound"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/lbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnValid"
        android:layout_below="@+id/editPassword"
        android:text="@string/lb_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:typeface="monospace" />

</RelativeLayout>