<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="CustomDialogTheme" >

    <TextView
        android:id="@+id/lbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="18dp"
        android:text="@string/lb_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbLogin"
        android:layout_below="@+id/lbLogin"
        android:ems="10"
        android:inputType="text"
        style="@style/red" />

    <TextView
        android:id="@+id/lbPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLogin"
        android:layout_below="@+id/editLogin"
        android:layout_marginTop="35dp"
        android:text="@string/lb_pwd"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbPassword"
        android:layout_below="@+id/lbPassword"
        android:ems="10"
        android:inputType="textPassword"
        style="@style/red" />

    <Button
        android:id="@+id/btnValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editPassword"
        android:layout_marginTop="40dp"
        android:text="@string/btn_valid"
        android:textColor="@color/white"
        android:typeface="monospace"
        style="@style/Buttonred" />

</RelativeLayout>
