<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <Button
        android:id="@+id/btnP1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_player1"
        android:rotation="180"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnP2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_player2"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/imgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/img_color"
        android:src="@drawable/img_black" />

    <TextView
        android:id="@+id/lbScoreP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnP1"
        android:text="0"
        android:rotation="180"
        android:textColor="@color/gray"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lbScoreP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnP2"
        android:layout_alignParentRight="true"
        android:text="0"
        android:textColor="@color/gray"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lbTimer"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:rotation="90"
        android:text="00:00:00"
        android:textColor="@color/gray"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
